@@ -1,5 +1,5 @@
 
-Libpng 1.5.4beta03 - June 14, 2011
+Libpng 1.5.4beta03 - June 15, 2011
 
 This is not intended to be a public release.  It will be replaced
 within a few weeks by a public version or by another test version.
@@ -210,6 +210,8 @@ Version 1.5.4beta03 [June 15, 2011]
     form if tRNS was present but alpha was marked to be stripped; this exposed
     a check for tRNS in png_do_expand_palette() which is inconsistent with the
     code elsewhere in libpng.
+  Correction to the expand_16 code; removed extra instance of
+    png_set_scale_16_to_8 from pngpriv.h
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
